name: traction
version: 0.0.1
license: BSD3
author: Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2017 Mark Hibberd
cabal-version: >= 1.24
build-type: Simple
description:
  A few tools for using postgresql-simple.

library
  default-language: Haskell2010

  build-depends:
      base >= 3 && < 5
    , bytestring == 0.10.*
    , containers >= 0.5.8      && < 0.7
    , exceptions == 0.8.*
    , mmorph == 1.*
    , postgresql-simple == 0.5.*
    , resource-pool == 0.2.*
    , text == 1.2.*
    , transformers == 0.5.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Traction.Control
    Traction.EitherT
    Traction.Migration
    Traction.Prelude
    Traction.Sql

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , hedgehog == 0.2.*
    , postgresql-simple == 0.5.*
    , resource-pool == 0.2.*
    , traction

  ghc-options:
    -Wall
    -threaded
    -O2
